# applyBN

./: .gitignore  404.html  README.md  README_eng.md  README_ru.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests.yml
api/bn_oversampling/: index.html
api/feature_extraction/: index.html
api/feature_selection/: index.html
api/pipeline_creation/: index.html
api/synthetic_data_generation/: index.html
applybn/anomaly_detection/: anomaly_detection_pipeline.py
applybn/core/: __init__.py  bamt_wrappers.py  estimators.py  logger.py  logging.py  pipelines.py  progress_bar.py  schema.py
applybn/feature_extraction/: SelectBN.py  bn_feature_extractor.py
applybn/feature_selection/: __init__.py  bn_nmi_feature_selector.py  ce_feature_selector.py
data/bn_oversampling/: bank-marketing.csv
data/feature_extraction/:  Banknote Authentication.csv  irish.csv
development/contributing/: index.html
docs/: index.md  tabular_anomaly_detection.md
search/: search_index.json
tests/: anomaly_detetction_tabular_test.py  base_estimator_test.py  base_estimator_tests.py  bn_feature_extractor_fit_test.py  bn_feature_extractor_fit_tests.py  bn_feature_extractor_initialization_test.py  bn_feature_extractor_test.py  bn_feature_extractor_tests.py  bn_feature_extractor_transform_test.py  bn_feature_extractor_transform_tests.py  causal_interventions_test.py  causal_interventions_tests.py  conftest.py  fast_ts_anomaly_detection_test.py  nmi_feature_selector_test.py  temporal_data_transformer_test.py  test_bn_over_sampler.py  test_cfs.py
(+151 files in other folders)
